[package]
name = "ms"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ordered-float = "5.3.0"
plotters = "0.3"
polars = { version = "0.54.4", features = ["csv", "parquet"] }
rand = "0.10.2"
rand_distr = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
clippy = "0.0.302"
